# SpotiTUI

./: .gitignore  CMakeLists.txt  LICENSE  README-windows.md  README.md  build-windows.bat  vcpkg.json
include/spotify_tui/api/: client.hpp  oauth.hpp
include/spotify_tui/app/: config.hpp
include/spotify_tui/cache/: disk_cache.hpp  lru_cache.hpp
include/spotify_tui/playback/: ipc_client.hpp  librespot_process.hpp  player.hpp
include/spotify_tui/ui/: main_ui.hpp
include/spotify_tui/ui/components/: progress_bar.hpp  scroller.hpp  volume_slider.hpp
include/spotify_tui/utils/: logger.hpp  platform.hpp  thread_pool.hpp
release/: INSTALL.md  SpotiTUI-linux-x86_64.tar.gz.sha256
src/: main.cpp
src/api/: client.cpp  oauth.cpp
src/app/: config.cpp
src/cache/: disk_cache.cpp
src/playback/: ipc_client.cpp  librespot_process.cpp  player.cpp
src/ui/: main_ui.cpp
src/ui/components/: progress_bar.cpp  volume_slider.cpp
src/utils/: logger.cpp  platform.cpp  thread_pool.cpp
